updated DESCRIPTION file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,19 +19,20 @@ Imports:
     data.table,
     magrittr,
     dplyr,
-    rtracklayer,
-    GenomicRanges,
-    BSgenome.Hsapiens.UCSC.hg19,
-    BSgenome,
-    BiocIO,
-    Biostrings,
-    BiocGenerics,
-    S4Vectors,
-    IRanges,
-    GenomeInfoDb,
     MASS,
     pbapply,
     plyr,
     stringr,
     fastglm,
-    arm
+    arm,
+    IRanges,
+    S4Vectors,
+    GenomicRanges,
+    BiocIO,
+    Biostrings,
+    BiocGenerics,
+    rtracklayer,
+    GenomeInfoDb,
+    BSgenome,
+    BSgenome.Hsapiens.UCSC.hg19
+
