--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(filter_ranges)
 export(find_closest_neighbor)
 export(fit_glm)
 export(fit_selection_model)
+export(get_cadd_model_table)
 export(get_ensembl_from_hgnc)
 export(get_gene_location)
 export(get_gene_neighbors)
@@ -18,6 +19,7 @@ export(get_mutation_spectra)
 export(get_mutations_annot)
 export(get_mutations_table)
 export(get_neighbors_model_table)
+export(get_selection_estimates_cadd)
 export(get_selection_estimates_neighbors)
 export(get_similar_genes_rmd)
 export(load_annotation)
