make CADD scores external to the package, added function to download it

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calculate_trinucleotide_composition)
 export(check_gene_aliases)
 export(convert_dna_length)
 export(debias_selection_estimates)
+export(download_cadd_file)
 export(extract_variables_from_formula)
 export(filter_ranges)
 export(find_closest_neighbor)
