--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,3 +31,4 @@ importFrom(arm,bayesglm.fit)
 importFrom(data.table,data.table)
 importFrom(fastglm,fastglmPure)
 importFrom(magrittr,"%>%")
+importFrom(rlang,":=")
