changed order or packages in Imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     data.table,
     magrittr,
     dplyr,
+    rlang,
     MASS,
     pbapply,
     plyr,
@@ -27,12 +28,11 @@ Imports:
     arm,
     IRanges,
     S4Vectors,
-    GenomicRanges,
-    BiocIO,
-    Biostrings,
     BiocGenerics,
-    rtracklayer,
+    BiocIO,
     GenomeInfoDb,
+    GenomicRanges,
+    Biostrings,
+    rtracklayer,
     BSgenome,
-    BSgenome.Hsapiens.UCSC.hg19,
-    rlang
+    BSgenome.Hsapiens.UCSC.hg19
