--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(get_selection_estimates_neighbors)
 export(get_similar_genes_rmd)
 export(load_annotation)
 export(load_mutations)
+export(make_ranges_from_table)
 export(remove_mismatched_samples)
 export(shuffle_mutation_counts)
 importFrom(arm,bayesglm.fit)
