--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(get_similar_genes_rmd)
 export(load_annotation)
 export(load_mutations)
 export(make_ranges_from_table)
+export(make_sql_gene_annotation)
 export(remove_mismatched_samples)
 export(shuffle_mutation_counts)
 importFrom(arm,bayesglm.fit)
