--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(calculate_trinucleotide_composition)
 export(check_gene_aliases)
 export(check_regression_data_integrity)
 export(convert_dna_length)
+export(correct_pvalues)
 export(debias_selection_estimates)
 export(download_cadd_file)
 export(extract_variables_from_formula)
@@ -28,6 +29,8 @@ export(load_annotation)
 export(load_mutations)
 export(make_ranges_from_table)
 export(make_sql_gene_annotation)
+export(post_process_pvalues)
+export(process_target_rows)
 export(remove_mismatched_samples)
 export(shuffle_mutation_counts)
 importFrom(arm,bayesglm.fit)
