--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,56 @@
 inst/extdata/RmdGenesSimilarity/*.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.5.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.7.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.7.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.7.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.9.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.8.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.9.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.8.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.6.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.6.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.7.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.7.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.5.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.5.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.8.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.8.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.9.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.8.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.5.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.9.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.6.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.9.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.1.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.5.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.6.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.3.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.2.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.6.rda filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity filter=lfs diff=lfs merge=lfs -text
