updating to use rds files

--- a/.gitattributes
+++ b/.gitattributes
@@ -54,3 +54,57 @@ inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.rda filter=lfs diff=lfs
 inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.2.rda filter=lfs diff=lfs merge=lfs -text
 inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.6.rda filter=lfs diff=lfs merge=lfs -text
 inst/extdata/RmdGenesSimilarity filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.9.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.4.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.5.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.9.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.4.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.7.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.8.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.5.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.7.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.4.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.9.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.4.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.6.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.8.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.8.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.4.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.7.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.9.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.6.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.7.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.7.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.6.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.5.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.5.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.5.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.6.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.8.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.8.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.9.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_3.2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.6.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_5.3.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_0.1.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_1.2.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_2.4.rds filter=lfs diff=lfs merge=lfs -text
+inst/extdata/RmdGenesSimilarity/RmdGenesSimilarity_max_4.rds filter=lfs diff=lfs merge=lfs -text
