update to import R.utils for fread gzip files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(post_process_pvalues)
 export(process_target_rows)
 export(remove_mismatched_samples)
 export(shuffle_mutation_counts)
+import(R.utils)
 importFrom(arm,bayesglm.fit)
 importFrom(data.table,data.table)
 importFrom(fastglm,fastglmPure)
